# SAM

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.old  Makefile  README.md  SAM.pro  cross_file.ini  meson.build  moc_basiccontroller.cpp  moc_buzzer.cpp  moc_client.cpp  moc_compensationoptitrack.cpp  moc_consoleinput.cpp  moc_consolemenu.cpp  moc_optilistener.cpp  moc_osmerelbow.cpp  moc_predefs.h  moc_pronosupination.cpp  moc_server.cpp  moc_voluntarycontrol.cpp  native.ini
Monitoring/: Monitoring.pro
Monitoring/src/: main.cpp
Monitoring/src/ui/: logdisplay.cpp  logdisplay.h  logdisplay.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menudisplay.cpp  menudisplay.h  menudisplay.ui  mqttconnect.cpp  mqttconnect.h  mqttconnect.ui  systemdisplay.cpp  systemdisplay.h  systemdisplay.ui  (+3 more)
meson/: cross_file.ini  native.ini
run/tilix/: layout.json
src/: CMakeLists.txt  main.cpp
src/components/: CMakeLists.txt
src/components/internal/: CMakeLists.txt  adafruit_ads1115.h  mcp4728.cpp  mcp4728.h
src/components/internal/actuators/: CMakeLists.txt  actuator.cpp  actuator.h  custom_elbow.cpp  custom_elbow.h  elbow_cybathlon.cpp  elbow_cybathlon.h  osmer_elbow.h  pronosupination.cpp  pronosupination.h  shoulder_rotator.h  wrist_cybathlon.cpp  wrist_cybathlon.h  wrist_rotator.cpp  wrist_rotator.h
src/components/internal/actuators/epos/: CMakeLists.txt  epos.cpp  epos.h
src/components/internal/actuators/roboclaw/: CMakeLists.txt  answer.cpp  factory.h  message.cpp  roboclaw.cpp  roboclaw.h
src/components/internal/adc/: CMakeLists.txt  adafruit_ads1115.cpp  adafruit_ads1115.h
src/components/internal/dac/: CMakeLists.txt
src/components/internal/gpio/: CMakeLists.txt  gpio.cpp  gpio.h
src/components/internal/hand/: CMakeLists.txt  quantum_hand.cpp  quantum_hand.h  touch_bionics_hand.cpp  touch_bionics_hand.h
src/components/internal/roboclaw/: factory.cpp  factory.h
src/components/internal/touch_bionics/: touch_bionics_hand.cpp
src/components/internal/touchsensor/: CMakeLists.txt  at42qt1070.cpp  at42qt1070.h
src/control/: CMakeLists.txt  basic_controller.cpp  basic_controller.h  basiccontroller.cpp  basiccontroller.h  compensation_imu.cpp  compensation_imu.h  compensation_optitrack.cpp  compensation_optitrack.h  compensationoptitrack.cpp  compensationoptitrack.h  controle_bretelles.cpp  controle_bretelles.h  controlimu.cpp  controlimu.h  cybathlon.cpp  cybathlon.h  demo.cpp  demo.h  demo_imu.cpp  demo_imu.h  general_formulation.cpp  general_formulation.h  general_formulation_imu.cpp  general_formulation_imu.h  gf_imuv2.cpp  gf_imuv2.h  hololens.cpp  hololens.h  imuwe.cpp  imuwe.h  jf_imu.cpp  jf_imu.h  jf_opti.cpp  jf_opti.h  jf_opti_orientation.cpp  jf_opti_orientation.h  jfimu.cpp  jfimu.h  jfimu_sk.cpp  (+37 more)
src/control/algo/: lawimu.cpp  lawimu.h  lawimu_we.cpp  lawimu_we.h  lawimu_wrist.cpp  lawimu_wrist.h  lawjacobian.cpp  lawjacobian.h  lawopti.cpp  lawopti.h  myocontrol.cpp  myocontrol.h
src/control/algorithms/: lawimu.cpp  lawimu.h  lawjacobian.cpp  lawjacobian.h  lawopti.cpp  lawopti.h  myocontrol.cpp  myocontrol.h
src/peripherals/: XIMU.cpp  XIMU.h  adafruit_ads1115.cpp  adafruit_ads1115.h  buzzer.cpp  buzzer.h  ledstrip.cpp  ledstrip.h  mcp4728.cpp  mcp4728.h
src/peripherals/actuators/: actuator.cpp  actuator.h  custom_elbow.cpp  custom_elbow.h  osmer_elbow.cpp  osmer_elbow.h  pronosupination.cpp  pronosupination.h  shoulder_rotator.cpp  shoulder_rotator.h  wrist_flexor.cpp  wrist_flexor.h  wrist_rotator.cpp  wrist_rotator.h
src/peripherals/helpers/: osmerelbow.cpp  osmerelbow.h  pronosupination.cpp  pronosupination.h  wristflexor.cpp
src/peripherals/myoband/: myoband.cpp  myoband.h
src/peripherals/myoband/myoLinux/: serial.cpp
src/peripherals/roboclaw/: answer.h  cast_helper.h  client.cpp  client.h  factory.cpp  factory.h  message.cpp  message.h  roboclaw.cpp  roboclaw.h  server.cpp  server.h  types.h
src/peripherals/touch_bionics/: touch_bionics_hand.cpp  touch_bionics_hand.h
src/sam/: sam.cpp  sam.h  samanager.cpp  samanager.h  system_monitor.cpp  system_monitor.h
src/ui/: CMakeLists.txt  console_input.cpp  console_input.h  console_menu.cpp  console_menu.h  console_menu_item.h  consoleinput.cpp  consoleinput.h  consolemenu.cpp  consolemenu.h  consolemenuitem.h  menu_backend.cpp  menu_backend.h  menu_broker.cpp  menu_broker.h  menu_console.cpp  menu_console.h  menu_frontend.cpp  menu_frontend.h  menu_item.h  menu_mqtt.cpp  menu_mqtt.h  menu_user.cpp  menu_user.h  mqtt_user.cpp  mqtt_user.h
src/ui/menu/: menu_console.cpp  menu_console.h  menu_frontend.cpp  menu_frontend.h  menu_mqtt.cpp  menu_mqtt.h
src/ui/mosquitto/: client.cpp  client.h  connect_helper.cpp  connect_helper.h  library_version.h  library_wrapper.cpp  library_wrapper.h  subscription.cpp  subscription.h
src/ui/sound/: buzzer.cpp  buzzer.h
src/ui/visual/: ledstrip.cpp  ledstrip.h
src/utils/: CMakeLists.txt  check_ptr.h  logger.cpp  logger.h  mqtt_wrapper.cpp  mqtt_wrapper.h  mqttclient.cpp  mqttclient.h  named_object.cpp  named_object.h  opti_listener.cpp  opti_listener.h  optilistener.cpp  optilistener.h  param.cpp  param.h  pseudoinverse.cpp  pseudoinverse.h  sam.cpp  sam.h  samanager.cpp  samanager.h  serial_port.cpp  serial_port.h  serialport.cpp  settings.cpp  settings.h  socket.cpp  socket.h  system_monitor.cpp  system_monitor.h  systemmonitor.cpp  systemmonitor.h  threaded_loop.cpp  threaded_loop.h  watchdog.cpp  watchdog.h  worker.cpp  worker.h
src/utils/interfaces/: menu_user.cpp  menu_user.h  mqtt_user.cpp  mqtt_user.h
src/utils/log/: log.h  logger.cpp  logger.h  safe_stream.cpp  safe_stream.h
src/utils/monitoring/: abstract_monitor.cpp  abstract_monitor.h  cpu_freq_monitor.cpp  cpu_freq_monitor.h  cpu_load_monitor.cpp  cpu_load_monitor.h  cpu_temp_monitor.cpp  cpu_temp_monitor.h  vc_based_monitor.cpp  vc_based_monitor.h
src/ux/: CMakeLists.txt  mosquittopp
src/ux/Osc99/: CMakeLists.txt  OscError.h  OscMessage.h  OscPacket.h  OscSlip.h
src/ux/menu/: menu_backend.cpp  menu_backend.h  menu_broker.h  menu_item.cpp  menu_item.h
(+2 files in other folders)
